syntax = "proto3";

option go_package = "github.com/pescuma/go-fs-snapshot/internal/rpc";

package rpc;

service FsSnapshot {
  rpc CanCreateSnapshots(CanCreateSnapshotsRequest) returns (CanCreateSnapshotsReply) {}
  rpc ListProviders(ListProvidersRequest) returns (ListProvidersReply) {}
  rpc ListSets(ListSetsRequest) returns (ListSetsReply) {}
  rpc ListSnapshots(ListSnapshotsRequest) returns (ListSnapshotsReply) {}
  rpc SimplifyId(SimplifyIdRequest) returns (SimplifyIdReply) {}
  rpc DeleteSet(DeleteRequest) returns (DeleteReply) {}
  rpc DeleteSnapshot(DeleteRequest) returns (DeleteReply) {}
  rpc ListMountPoints(ListMountPointsRequest) returns (ListMountPointsReply) {}
  rpc StartBackup(StartBackupRequest) returns (stream StartBackupReply) {}
  rpc TryToCreateTemporarySnapshot(TryToCreateTemporarySnapshotRequest) returns (stream TryToCreateTemporarySnapshotReply) {}
  rpc CloseBackup (CloseBackupRequest) returns (stream CloseBackupReply) {}
}

message CanCreateSnapshotsRequest {
}
message CanCreateSnapshotsReply {
  bool can = 1;
}


message ListProvidersRequest {
  string filterId = 1;
}
message ListProvidersReply {
  repeated Provider providers = 1;
}

message ListSetsRequest {
  string filterId = 1;
}
message ListSetsReply {
  repeated SnapshotSet sets = 1;
}

message ListSnapshotsRequest {
  string filterId = 1;
}
message ListSnapshotsReply {
  repeated Snapshot snapshots = 1;
}

message SimplifyIdRequest {
  string id = 1;
}
message SimplifyIdReply {
  string simpleId = 1;
}

message DeleteRequest {
  string id = 1;
  bool force = 2;
}
message DeleteReply {
  bool deleted = 1;
}

message ListMountPointsRequest {
  string volume = 1;
}
message ListMountPointsReply {
  repeated string mountPoints = 1;
}

message StartBackupRequest {
  string providerId = 1;
  int32 timeoutInSec = 2;
  bool simple = 3;
}
message StartBackupReply {
  oneof MessageOrResult {
    OutputMessage message = 1;
    StartBackupResult result = 2;
  }
}
message StartBackupResult {
  uint32 backuperId = 1;
  bool caseSensitive = 2;
}

message TryToCreateTemporarySnapshotRequest {
  uint32 backuperId = 1;
  string dir = 2;
}
message TryToCreateTemporarySnapshotReply {
  oneof MessageOrResult {
    OutputMessage message = 1;
    TryToCreateTemporarySnapshotResult result = 2;
  }
}
message TryToCreateTemporarySnapshotResult {
  string snapshotDir = 1;
}

message CloseBackupRequest {
  uint32 backuperId = 1;
}
message CloseBackupReply {
  OutputMessage message = 1;
}

message Provider {
  string id = 1;
  string name = 2;
  string version = 3;
  string type = 4;
}

message SnapshotSet {
  string id = 1;
  int64 creationTime = 2;
  int32 snapshotCountOnCreation = 3;
  repeated Snapshot snapshots = 4;
}

message Snapshot {
  string id = 1;
  string originalPath = 2;
  string snapshotPath = 3;
  int64 creationTime = 4;
  SnapshotSet set = 5;
  Provider provider = 6;
  string state = 7;
  string attributes = 8;
}

message OutputMessage {
  MessageLevel level = 1;
  string message = 2;
}
enum MessageLevel {
  OutputLevel = 0;
  InfoLevel = 1;
  DetailsLevel = 2;
  TraceLevel = 3;
}


